added new option <ServerX.Cipher> to manually select cipher for encrypted communication with news server; manually choosing a faster cipher (such as <RC4>) can significantly improve performance (if CPU is a limiting factor)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@575 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -127,6 +127,39 @@ Server1.JoinGroup=yes
 # accordingly because unsecure and encrypted connections use different ports.
 Server1.Encryption=no
 
+# Cipher to use for encrypted server connection.
+#
+# By default (when the option is empty) the underlying encryption library
+# chooses the cipher automatically.
+#
+# To achieve the best performance (if CPU is a limiting factor) however
+# you can manually select a faster cipher. Some hardware have built-in
+# support for some ciphers. Choosing such a cipher can also significantly
+# improve performance.
+#
+# The list of possible values for the option depends on used encryption
+# library (OpenSSL or GnuTLS) and configuration of the library.
+#
+# If you use OpenSSL:
+#   - terminal command "openssl ciphers -v" prints the list of available
+#     ciphers (the first column is the name which should be used in NZBGet);
+#   - terminal command "openssl speed" tests performance of ciphers.
+#   - one of the fastest cipher is RC4, it also provides strong 128 bit
+#     encryption. To select it use the cipher string "RC4-MD5";
+#   - for more information see "ciphers(1)" in OpenSSL documentation.
+#
+# If you use GnuTLS:
+#   - cipher string "PERFORMANCE" selects a cipher based on performance,
+#     this however doesn't give your the full control on which cipher is used;
+#   - one of the fastest cipher is RC4, it also provides strong 128 bit
+#     encryption. To select it use the following cipher string:
+#     "NONE:+VERS-TLS-ALL:+ARCFOUR-128:+RSA:+MD5:+COMP-ALL";
+#   - for more information see "Priority strings" in GnuTLS documentation.
+#
+# NOTE: You may get a TLS handshake error if the news server does
+# not support the chosen cipher.
+Server1.Cipher=
+
 # Maximal number of simultaneous connections to this server (0-999).
 Server1.Connections=4
 
