updated VC++ project file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@577 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -408,6 +408,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\ParRenamer.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\ParRenamer.h"
+			>
+		</File>
+		<File
 			RelativePath=".\PrePostProcessor.cpp"
 			>
 		</File>
