news servers configuration is now less error-prone: 1) the option <ServerX.Level> is not required to start from <0> and when several news servers are configured the Levels can be any integers - the program sorts the servers and corrects the Levels to 0,1,2,etc. automatically if needed; 2) when option <ServerX.Connections> is set to <0> the server is ignored (in previous version such a server could cause hanging when the program was trying to go to the next level); 3) if no news servers are defined (or all definitions are invalid) a warning is printed to inform that the download is not possible
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@578 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -92,15 +92,13 @@ WebDir=
 # change the name of Server3 to Server2. Otherwise it will not be properly
 # read from the config file. Server number doesn't affect its priority (level).
 
-# Level of newsserver (0-99).
+# Level (priority) of newsserver (0-99).
 #
 # The servers will be ordered by their level, i.e. NZBGet will at
 # first try to download an article from the level-0-server.
 # If that server fails, NZBGet proceeds with the level-1-server, etc.
-# A good idea is surely to put your major download-server at level 0
-# and your fill-servers at levels 1,2,...
-#
-# NOTE: Do not leave out a level in your server-list and start with level 0.
+# Put your major download-server at level 0 and your fill-servers at
+# levels 1, 2, etc..
 #
 # NOTE: Several servers with the same level may be used, they will have
 # the same priority.
