updated description of option <ServerX.Cipher> and added link to wiki article <Choosing a cipher>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@580 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -128,34 +128,19 @@ Server1.Encryption=no
 # Cipher to use for encrypted server connection.
 #
 # By default (when the option is empty) the underlying encryption library
-# chooses the cipher automatically.
+# chooses the cipher automatically. To achieve the best performance
+# however you can manually select a faster cipher.
 #
-# To achieve the best performance (if CPU is a limiting factor) however
-# you can manually select a faster cipher. Some hardware have built-in
-# support for some ciphers. Choosing such a cipher can also significantly
-# improve performance.
+# See http://nzbget.sourceforge.net/Choosing_a_cipher for details.
 #
-# The list of possible values for the option depends on used encryption
-# library (OpenSSL or GnuTLS) and configuration of the library.
-#
-# If you use OpenSSL:
-#   - terminal command "openssl ciphers -v" prints the list of available
-#     ciphers (the first column is the name which should be used in NZBGet);
-#   - terminal command "openssl speed" tests performance of ciphers.
-#   - one of the fastest cipher is RC4, it also provides strong 128 bit
-#     encryption. To select it use the cipher string "RC4-MD5";
-#   - for more information see "ciphers(1)" in OpenSSL documentation.
-#
-# If you use GnuTLS:
-#   - cipher string "PERFORMANCE" selects a cipher based on performance,
-#     this however doesn't give your the full control on which cipher is used;
-#   - one of the fastest cipher is RC4, it also provides strong 128 bit
-#     encryption. To select it use the following cipher string:
-#     "NONE:+VERS-TLS-ALL:+ARCFOUR-128:+RSA:+MD5:+COMP-ALL";
-#   - for more information see "Priority strings" in GnuTLS documentation.
+# NOTE: One of the fastest cipher is RC4, it also provides strong 128 bit
+# encryption. To select it use the cipher string "RC4-MD5" (if NZBGet was
+# configured to use OpenSSL) or "NONE:+VERS-TLS-ALL:+ARCFOUR-128:+RSA:+MD5:+COMP-ALL"
+# (if NZBGet was configured to use GnuTLS).
 #
 # NOTE: You may get a TLS handshake error if the news server does
-# not support the chosen cipher.
+# not support the chosen cipher. You can also get an error "Could not
+# select cipher for TLS" if the cipher string is not valid.
 Server1.Cipher=
 
 # Maximal number of simultaneous connections to this server (0-999).
@@ -1139,29 +1124,3 @@ PostPauseQueue=no
 #Task2.WeekDays=1-7
 #Task2.Command=DownloadRate
 #Task2.DownloadRate=0
-
-
-##############################################################################
-## PERFORMANCE                                                              ##
-
-# On a very fast connection and slow CPU and/or drive the following
-# settings may improve performance:
-# 1) Disable par-checking and -repairing ("ParCheck=no"). VERY important,
-#    because par-checking/repairing needs a lot of CPU-power and
-#    significantly increases disk usage;
-# 2) Try to activate option <DirectWrite> ("DirectWrite=yes"), especially
-#    if you use EXT3-partitions (Linux) or NTFS (Windows);
-# 3) Disable option <CrcCheck> ("CrcCheck=no");
-# 4) Disable option <ContinuePartial> ("ContinuePartial=no");
-# 5) Do not limit download rate ("DownloadRate=0"), because the bandwidth
-#    throttling eats some CPU time. Disable accurate speed rate
-#    meter ("AccurateRate=no");
-# 6) Disable logging for detail- and debug-messages ("DetailTarget=none",
-#    "DebugTarget=none");
-# 7) Run the program in daemon (POSIX) or service (Windows) mode and use
-#    remote client for short periods of time needed for controlling of
-#    download process on server. Daemon/Service mode eats less CPU
-#    resources than console server mode due to not updating the screen.
-# 8) Increase the value of option <WriteBufferSize> or better set it to
-#    "-1" (max/auto) if you have spare 5-20 MB of memory.
-
