changed default value for option <ServerX.JoinGroup> to <no>; most news servers nowadays do not require joining the group and many servers do not keep headers for many groups making the join-command fail even if the articles still can be successfully downloaded
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@585 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -117,7 +117,7 @@ Server1.Username=user
 Server1.Password=pass
 
 # Server requires "Join Group"-command (yes, no).
-Server1.JoinGroup=yes
+Server1.JoinGroup=no
 
 # Encrypted server connection (TLS/SSL) (yes, no).
 #
