addition to r586/r591: added automatic speed meter recalibration to recover after possible synchronisation errors which can occur when the option <AccurateRate> is not active; this makes the default (less accurate but fast) speed meter almost as good as the accurate one; important when speed throttling is active
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@592 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -517,7 +517,7 @@ ConnectionTimeout=60
 # Do not use small values!
 TerminateTimeout=600
 
-# Set the (approximate) maximum number of allowed threads (0-999).
+# Set the (approximate) maximum number of allowed threads (50-999).
 #
 # Sometimes under certain circumstances the program may create way to many
 # download threads. Most of them are in wait-state. That is not bad,
@@ -549,23 +549,19 @@ DownloadRate=0
 # Accurate speed rate calculation (yes, no).
 #
 # During downloading using several connections the download threads may
-# interfere with each other when updating statistical data for speed meter.
-# This may cause calculation errors resulting in a wrong download rate
-# reported by the program. This can be critical especially when using download
-# rate throttling.
+# interfere with each other when updating statistical data for speed
+# meter. This may cause small errors in current download speed reported
+# by the program. The speed meter recovers automatically from such errors
+# after max. 30 seconds (time window used for speed calculation).
 #
 # Enable the option to use thread synchronisation mechanisms in order to
-# provide accurate speed calculations.
+# provide absolutely accurate speed calculations.
 #
-# NOTE: The program uses spinlocks if the operating system supports them.
-# Otherwise it uses mutexes, which are less effective. In any case the thread
-# synchronisation increases CPU load.
-#
-# NOTE: It is recommended to run tests to determine how the option affects
-# the CPU usage and the download speed on a particular system.
-#
-# NOTE: The average (session) download speed is always accurate. It uses
-# other data for speed calculation and is not affected by this option.
+# NOTE: Thread synchronisation increases CPU load and therefore can
+# decrease download speed. Do not activate this option on computers with
+# limited CPU power. Before activating the option it is recommended to
+# run tests to determine how the option affects the CPU usage and the
+# download speed on a particular system.
 AccurateRate=no
 
 # Set the size of memory buffer used by writing the articles (bytes).
