major improvement in news-server/connection  management (main and fill servers): if download of article fails, the program tries all servers of the same level before trying higher level servers; this ensures that fill servers are used only if all main servers fail; this makes the configuring of multiple servers much easier than before: in most cases the simple configuration of level 0 for all main servers and level 1 for all fill servers suffices; in previous versions the level was increased immediately after the first tried server of the level failed; to make sure all main servers were tried before downloading from fill servers it was required to create complex server configurations with duplicates; these configurations were still not as effective as now
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@599 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -92,19 +92,21 @@ WebDir=
 # change the name of Server3 to Server2. Otherwise it will not be properly
 # read from the config file. Server number doesn't affect its priority (level).
 
-# Level (priority) of newsserver (0-99).
+# Level (priority) of news server (0-99).
 #
-# The servers will be ordered by their level, i.e. NZBGet will at
-# first try to download an article from the level-0-server.
-# If that server fails, NZBGet proceeds with the level-1-server, etc.
-# Put your major download-server at level 0 and your fill-servers at
+# The servers are ordered by their level. NZBGet first tries to download
+# an article from one (any) of level-0-servers. If that server fails,
+# NZBGet tries all other level-0-servers. If all servers fail, it proceeds
+# with the level-1-servers, etc.
+#
+# Put your major download servers at level 0 and your fill servers at
 # levels 1, 2, etc..
 #
-# NOTE: Several servers with the same level may be used, they will have
+# Several servers with the same level may be defined, they have
 # the same priority.
 Server1.Level=0
 
-# Host name of newsserver.
+# Host name of news server.
 Server1.Host=my.newsserver.com
 
 # Port to connect to (1-65535).
@@ -487,26 +489,28 @@ DirectWrite=yes
 # Check CRC of downloaded and decoded articles (yes, no).
 #
 # Normally this option should be enabled for better detecting of download
-# errors. However checking of CRC needs about the same CPU time as
-# decoding of articles. On a fast connections with slow CPUs disabling of
-# CPU-check may slightly improve performance (if CPU is a limiting factor).
+# errors. However checking of CRC needs CPU time. On a fast connection and
+# slow CPU disabling of CRC-Check may improve performance.
 CrcCheck=yes
 
-# How much retries should be attempted if a download error occurs (0-99).
+# How many retries should be attempted if a download error occurs (0-99).
+#
+# 1) If download fails because of "article or group not found error" the
+# program tries another news server.
+#
+# 2) If download fails because of interrupted connection, the program
+# tries the same server again until connection can be established.
+#
+# In both cases 1) and 2) option <Retries> is not used.
+#
+# If download however fails because of incomplete article, CRC-error or other
+# error not mentioned above the program tries to redownload the article from
+# the same news server as many times as defined in option <Retries>. If all
+# attempts fail the program tries another news server.
 Retries=3
 
 # Set the interval between retries (seconds).
 RetryInterval=10
-
-# Redownload article if CRC-check fails (yes, no).
-#
-# Helps to minimize number of broken files, but may be effective
-# only if you have multiple download servers (even from the same provider
-# but from different locations (e.g. europe, usa)).
-# In any case the option increases your traffic.
-# For slow connections loading of extra par-blocks may be more effective
-# The option <CrcCheck> must be enabled for option <RetryOnCrcError> to work.
-RetryOnCrcError=no
 
 # Set connection timeout (seconds).
 ConnectionTimeout=60
@@ -517,7 +521,7 @@ ConnectionTimeout=60
 # Do not use small values!
 TerminateTimeout=600
 
-# Set the (approximate) maximum number of allowed threads (50-999).
+# Set the (approximate) maximum number of allowed threads (10-999).
 #
 # Sometimes under certain circumstances the program may create way to many
 # download threads. Most of them are in wait-state. That is not bad,
