improvement in news-server/connection management: new option <ServerX.Group> allows more flexible configuration of news servers when using multiple accounts on the same server; with this option it's also possible to imitate the old server management behavior regarding levels as it was before r599
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@602 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -106,6 +106,16 @@ WebDir=
 # the same priority.
 Server1.Level=0
 
+# Group of news server (0-99).
+#
+# If you have multiple accounts with same conditions (retention, etc.)
+# on the same news server, set the same group (greater than 0) for all
+# of them. If download fails on one news server, NZBGet does not try
+# other servers from the same group.
+#
+# Value "0" means no group defined (default).
+Server1.Group=0
+
 # Host name of news server.
 Server1.Host=my.newsserver.com
 
