reworked post-processor queue: 1) only one job is created for each nzb-file; no more separate jobs are created for par-collections within one nzb-file; 2) option <AllowReProcess> removed; a post-processing script is called only once per nzb-file, this behavior cannot be altered anymore; 3) with a new feature <Split> (see next commits) individual par-collections can be processed separately in a more effective way than before
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@616 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -943,17 +943,8 @@ SevenZipCmd=7z
 # properly.
 #
 # INFO FOR DEVELOPERS:
-# If the option <AllowReProcess> is disabled (that's the default setting)
-# the post-processing script is executed once per nzb-file after 
+# The post-processing script is executed once per nzb-file after 
 # par-check/repair (if needed) and unpacking (if enabled).
-#
-# If the option <AllowReProcess> is active the post-processing script is
-# executed for each collection within nzb-file (for nzb-files having multiple
-# collections but at least once). Depending on option <ParCheck> the collection
-# could be already par-checked/repaired or the script could be called without
-# par-check taken place. In the latest case if the script detects errors
-# (such as unpack failed) it has an ability to request par-check from
-# NZBGet. After par-check/repair NZBGet calls the script once again.
 #
 # NZBGet passes following arguments to post-processing script as environment
 # variables:
@@ -976,18 +967,6 @@ SevenZipCmd=7z
 #                       1 = unpack failed;
 #                       2 = unpack successful.
 #
-# In addition the following arguments are passed if the option <AllowReProcess>
-# is active:
-#  NZBPP_PARFILENAME  - name of par-file or empty string (if no collections were
-#                       found);
-#  NZBPP_PARFAILED    - indication of failed par-jobs for current nzb-file:
-#                       0 = no failed par-jobs;
-#                       1 = current par-job or any of the previous par-jobs for
-#                           the same nzb-files failed;
-#  NZBPP_NZBCOMPLETED - state of nzb-job:
-#                       0 = there are more collections in this nzb-file queued;
-#                       1 = this was the last collection in nzb-file.
-#
 # If nzb-file has associated postprocess-parameters (which can be set using
 # subcommand <O> of command <-E>, for example: NZBGet -E G O "myvar=hello !" 10)
 # or using XML-/JSON-RPC (for example via web-interface), they are also passed
@@ -1007,11 +986,7 @@ SevenZipCmd=7z
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
 #  95 - post-process skipped (status = NONE);
-#  91 - request NZBGet to do par-check/repair for current collection in the
-#       current nzb-file. This return code is accepted only if the
-#       option <AllowReProcess> is active;
-#  92 - request NZBGet to do par-check/repair for all collections (par-sets)
-#       in the current nzb-file.
+#  92 - request NZBGet to do par-check/repair for current nzb-file.
 # All other return codes are interpreted as "status unknown".
 #
 # The return value is used to display the status of post-processing in
@@ -1019,44 +994,7 @@ SevenZipCmd=7z
 # passed to history using a special prefix "[HISTORY]" by printing messages
 # to standard output. For example:
 #   echo "[ERROR] [HISTORY] Unpack failed, not enough disk space";
-#
-# NOTE: If the option <AllowReProcess> is active NZBGet calls the script
-# for each collection within nzb-file. The term "collection" actually means
-# "par-set". To determine what "collections" are present in nzb-file NZBGet
-# looks for par-sets. If any collection of files within nzb-file does
-# not have any par-files, this collection will not be detected.
-# For example, for nzb-file containing three collections but only two par-sets,
-# the postprocess will be called two times - after processing of each par-set.
-# If NZBGet doesn't find any collections it calls PostProcess once
-# with empty string for parameter NZBPP_PARFILENAME.
 PostProcess=
-
-# Allow multiple post-processing for the same nzb-file (yes, no).
-#
-# NOTE: Enable this option only if you were advised to do that by the author
-# of the post-processing script.
-#
-# NOTE: By enabling <AllowReProcess> you should disable the option <ParCheck>
-# to prevent multiple par-checking.
-#
-# INFO FOR DEVELOPERS:
-# This option affects the post-processing in several ways:
-#  1) If the option is active the post-processing script (option <PostProcess>)
-#     is called for each collection (par-set) within nzb-file;
-#  2) The post-processing script may be called multiple times when nzb-file
-#     reaches the state "completely downloaded". This can be needed if 
-#     the par-check/-repair is performed by the post-processing script
-#     (instead of relying on NZBGet's built-in par-check-feature).
-#
-# NOTE: If the built-in unpacking is active (option <Unpack>) this option
-# is ignored (as if it were set to "no").
-#
-# NOTE: If you develop a script depending on this option you should check
-# if the option is active when your script is started and generate an
-# error message if the option is not set correctly. You should also check
-# the option <Unpack> because if it's active the option <AllowReProcess>
-# doesn't work too.
-AllowReProcess=no
 
 # Pause download queue during executing of postprocess-script (yes, no).
 #
